--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
       </div>
     </nav>
     
+    <div id="anojs-sine-waves" style="padding-bottom:50px;"></div>
+    <script src="https://anojs.com/files/anojs-sine-waves.js?"></script>
             
     <div class="container-fluid">
       <div class="row justify-content-end" style="padding-top: 2%; padding-bottom: 2%; padding: 2%;">         
