--- a/templates/jazz.html
+++ b/templates/jazz.html
@@ -8,7 +8,7 @@
 {% block style %}
 <div style="background-color:white;padding:2%;">
 		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; font-style: Italic">Jazz</h1>
+      <h1 style="font-size: 200 px; font-family:Courier New; ">🎷Jazz🎷</h1>
 {% endblock %}
 
 
