--- a/templates/pop.html
+++ b/templates/pop.html
@@ -8,7 +8,10 @@
 {% block style %}
 <div style="background-color:white;padding:2%;">
 		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; font-style: Italic">Pop</h1>
+      <h1 style="font-size: 200 px; font-family:Courier New; ">🎙️Pop🎙️</h1>
+    </div>
+</div>
+
 {% endblock %}
 
 
