--- a/templates/rock.html
+++ b/templates/rock.html
@@ -8,7 +8,7 @@
 {% block style %}
 <div style="background-color:white;padding:2%;">
 		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; font-style: Italic">Rock</h1>
+      <h1 style="font-size: 200 px; font-family:Courier New; ">🎸Rock🎸</h1>
 {% endblock %}
 
 
