--- a/templates/base.html
+++ b/templates/base.html
@@ -14,31 +14,7 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    <style>
-		html {
-			scroll-behavior: smooth;
-		}
 
-		#hero-header {
-			background-image: url("https://cdn3.pitchfork.com/longform/683/Year_In_Streaming_v2.jpg");
-			height: 100vh;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			position: relative;
-		}
-
-		.hero-text {
-			text-align: center;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			color: white;
-		}
-
-    </style>
     {% block head %}
     {% endblock %}
   </head>
@@ -73,39 +49,19 @@
         </div>
       </div>
       
-      {% block header %}
-      {% endblock %}
-    
+      {% block style %}
       <div class="product" style="margin-top: 2%;">
-          {% block style %}
+        <div style="background-color:white;padding:2%;">
+		    <div style="color:black; text-align:center;">
+          <h1>
+          {% block text %}
+          Text Sample
           {% endblock %}
-          
-              <div class="col-8" >
-                  {% block title %}
-                  {% endblock %}
-              </div>
-
-          </div>
-
-          <div class="row" style="padding-left: 10%;">
-              <div class="col-4">
-                {% block link1 %}
-                {% endblock %}
-              </div>
-
-              <div class="col-4">
-                {% block link2 %}
-                {% endblock %}
-              </div>
-
-              <div class="col-4">
-                {% block link3 %}
-                {% endblock %}
-              </div>
-
-          </div>
-
+          </h1>
         </div>
+      </div>
+      {% endblock %}
+
     </div>
   </body>
 
