--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,37 @@
 {% extends "base.html" %}
 
 {% block head %}
+  <style>
+		html {
+			scroll-behavior: smooth;
+		}
+
+		#hero-header {
+			background-image: url("https://cdn3.pitchfork.com/longform/683/Year_In_Streaming_v2.jpg");
+			height: 100vh;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			position: relative;
+		}
+
+		.hero-text {
+			text-align: center;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			color: white;
+		}
+  </style>
   <title> Home </title>
 {% endblock %}
 
-{% block header %}
+{% block style %}
 <div id="hero-header">
   <div class="hero-text">
     <h1 style="font-size:50px">Music Website</h1>
     <p>Charlie A</p>
   </div>
 </div>
-
 {% endblock %}
