--- a/templates/jazz.html
+++ b/templates/jazz.html
@@ -5,10 +5,6 @@
 {% endblock %}
 
 
-{% block style %}
-<div style="background-color:white;padding:2%;">
-		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; ">🎷Jazz🎷</h1>
+{% block text %}
+🎷Jazz🎷
 {% endblock %}
-
-
