--- a/templates/pop.html
+++ b/templates/pop.html
@@ -4,14 +4,6 @@
   <title> Pop </title>
 {% endblock %}
 
-
-{% block style %}
-<div style="background-color:white;padding:2%;">
-		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; ">🎙️Pop🎙️</h1>
-    </div>
-</div>
-
+{% block text %}
+🎙️Pop🎙️
 {% endblock %}
-
-
