--- a/templates/rock.html
+++ b/templates/rock.html
@@ -4,11 +4,6 @@
   <title> Rock </title>
 {% endblock %}
 
-
-{% block style %}
-<div style="background-color:white;padding:2%;">
-		<div style="color:black; text-align:center;">
-      <h1 style="font-size: 200 px; font-family:Courier New; ">🎸Rock🎸</h1>
+{% block text %}
+🎸Rock🎸
 {% endblock %}
-
-
